# gwenland-ide

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  NEXT-PLAN.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  fetch_icons.js  icons.json
.github/: ISSUE_TEMPLATE.md
engine/: Cargo.toml
engine/proptest-regressions/: settings.txt
engine/src/: app_data.rs  audit.rs  devserver_detect.rs  fs.rs  fs_watch.rs  git.rs  history.rs  lib.rs  logs.rs  permissions.rs  recent_projects.rs  recovery.rs  search.rs  search_policy.rs  settings.rs  terminal.rs  tree.rs  workspace.rs
engine/src/agentic/: agent_loop.rs  changeset.rs  context.rs  memory.rs  mod.rs  persistence.rs  plan_parse.rs  policy.rs  prompts.rs  session.rs  summary.rs  tier.rs  tools.rs  validation.rs
engine/src/ai/: anthropic.rs  context.rs  conversation.rs  curl_client.rs  diff.rs  error.rs  gemini.rs  generic.rs  http.rs  keychain.rs  mod.rs  model_catalog.rs  openai.rs  provider.rs  registry.rs  sse.rs
engine/src/lsp/: client.rs  completion.rs  config.rs  definition.rs  diagnostics.rs  error.rs  hover.rs  json_rpc.rs  language.rs  mod.rs  process.rs  root.rs
engine/src/safety/: action.rs  audit.rs  confirmation.rs  decision.rs  file_guard.rs  guards.rs  mod.rs  permissions.rs  protected_paths.rs  recovery.rs
engine/src/system/: app_data.rs  logs.rs  mod.rs  recent_projects.rs  settings.rs
engine/src/terminal/: devserver_detect.rs  error_detect.rs  mod.rs  ring_buffer.rs
engine/src/workspace/: fs.rs  fs_watch.rs  git.rs  mod.rs  search.rs  tree.rs
frontend/: Cargo.toml  tauri.conf.json
frontend/capabilities/: default.json
frontend/editor/: build.sh  entry.js  package.json
frontend/icons/: icon.icns
frontend/src/: installer.nsi  main.rs
frontend/ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/ui/src/: App.svelte  main.ts
frontend/ui/src/lib/: actions.ts  agent-activity.test.ts  agent-activity.ts
frontend/ui/src/lib/actions/: aiChatActions.ts  editorActions.ts  fileActions.ts  gitActions.ts  globalActions.ts  panelActions.ts  terminalActions.ts  workspaceActions.ts
frontend/ui/src/lib/agentic/: agentic-setup.ts  mock-activity.ts
frontend/ui/src/lib/ai/: ai-chat-setup.ts  code-blocks.ts  diff-detection.ts  diff-rows.test.ts  diff-rows.ts  file-attachment.test.ts  file-attachment.ts  markdown.ts  math.ts  mention-setup.ts  model-catalog-cache.ts  persona-setup.ts  reasoning.ts  search-setup.ts  slash-command-setup.ts  thinking-parser.ts  usage.test.ts  usage.ts
frontend/ui/src/lib/commands/: keybinding-handler.test.ts  keybinding-handler.ts  registry.ts
frontend/ui/src/lib/components/: AboutDialog.svelte  ActivityBar.svelte  AiCodeBlock.svelte  AiConversation.svelte  AiHistory.svelte  AiMessage.svelte  AiPanel.svelte  AiSettingsSection.svelte  AssistantModeMenu.svelte  BranchSwitcher.svelte  ChangelogModal.svelte  Checkbox.svelte  CommandPalette.svelte  ComposerActionsMenu.svelte  ComposerModelMenu.svelte  ConfirmDialog.svelte  CustomDropdown.svelte  DiffActionBar.svelte  DiffReviewPanel.svelte  DiffView.svelte  Dropdown.svelte  Editor.svelte  EditorBreadcrumbs.svelte  EditorGroups.svelte  FileAttachment.svelte  FileIcon.svelte  FileTree.svelte  FileTreeRow.svelte  GitDiffViewer.svelte  GitPanel.svelte  GitStatusBar.svelte  Icon.svelte  LocalHistoryPanel.svelte  LspOnboardingBanner.svelte  LspSettingsSection.svelte  LspStatusIndicator.svelte  MarkdownPreview.svelte  MentionMenu.svelte  MentionPill.svelte  MenuBar.svelte  (+23 more)
frontend/ui/src/lib/context-menu/: ContextMenuItem.svelte  ContextMenuPortal.svelte  ContextMenuRoot.svelte  ContextMenuSeparator.svelte  actionRegistry.test.ts  actionRegistry.ts  contextMenuStore.ts  contextTypes.ts  globalContextMenu.ts  keybindings.ts  registerActions.ts
frontend/ui/src/lib/editor/: active-editor.ts  codemirror-setup.ts  diff-overlay.ts  insert-block.test.ts  language-detect.test.ts  language-detect.ts  large-file.test.ts  large-file.ts  overwrite-mode.test.ts  overwrite-mode.ts
frontend/ui/src/lib/icons/: gwenland-icons.ts  provider-icons.ts
frontend/ui/src/styles/: animations.css  base.css  editor.css  global.css  tokens.css
(+135 files in other folders)
