[package]
name = "gwenland-engine"
version = "0.1.7"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
thiserror = { workspace = true }
# Cross-platform PTY (ConPTY on Windows, openpty on Unix) via wezterm's crate.
# Runtime backend selection via native_pty_system(); MIT-licensed.
portable-pty = "0.9"

# --- M4 AI System ---------------------------------------------------------
# OS keychain (Windows Credential Manager / macOS Keychain / Linux Secret
# Service). The ONLY place API keys are ever stored.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
# Async runtime. The frontend (Tauri) drives the runtime in production; engine
# tests use #[tokio::test]. The curl transport uses async process/stdin/stdout.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"] }
# Object-safe async trait methods so `dyn AiProvider` / `dyn ChunkSource` work.
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
